.helm/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  ports:
  - name: web8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
  type: ClusterIP
